--- a/clouway-pcache-client-testing/build.gradle
+++ b/clouway-pcache-client-testing/build.gradle
@@ -14,4 +14,6 @@ dependencies {
   compile project(':clouway-pcache-client-core')
 
   compile 'junit:junit:4.11'
+  compile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+  compile group: 'org.jmock', name: 'jmock-junit4', version: '2.8.4'
 }
